django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-cms-svc
  namespace: default
spec:
  selector:
    app: django-cms
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
